# cpp-foundations

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: ci.yml
coverage/: index-sort-f.html  index-sort-l.html  index.html
coverage/src/: MathUtils.cpp.func-c.html  MathUtils.cpp.func.html  MathUtils.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
docs/: Doxyfile  mainpage.dox
docs/topics/: Course.dox  Lesson0.dox  Lesson01_Intro.dox  Lesson0_01_Setup.dox  Lesson0_02_GitWorkflow.dox  Lesson0_03_BuildAndTests.dox  Lesson0_04_GitIgnore.dox  Lesson0_05_Troubleshooting.dox
doxygen/: Lesson02__FunctionsNamespaces_8dox.html  Lesson03__HeadersCompilation_8dox.html  Lesson04__MemoryConstStatic_8dox.html  Lesson05__ProceduralMiniProject_8dox.html  Lesson0__01__Setup_8dox.html  Lesson0__02__GitWorkflow_8dox.html  Lesson0__03__BuildAndTests_8dox.html  Lesson0__04__GitIgnore_8dox.html  Lesson0__05__Troubleshooting_8dox.html  cpp_lesson_00.html  cpp_lesson_01.html  dir_49e56c817e5e54854c35e136979f97ca.html  files.html  group__course__cpp__foundations.html  group__course__cpp__foundations.map  group__course__cpp__foundations.md5  group__cpp__course.html  group__cpp__course.map  group__cpp__course.md5  group__cpp__lesson__00.html  group__cpp__lesson__00.map  group__cpp__lesson__00.md5  group__cpp__lesson__01.html  group__cpp__lesson__01.map  group__cpp__lesson__01.md5  group__lesson__01__intro.html  group__lesson__01__intro.map  group__lesson__01__intro.md5  group__lesson__02__functions__namespaces.html  group__lesson__02__functions__namespaces.map  group__lesson__02__functions__namespaces.md5  group__lesson__03__headers__compilation.html  group__lesson__03__headers__compilation.map  group__lesson__03__headers__compilation.md5  group__lesson__04__memory__const__static.html  group__lesson__04__memory__const__static.map  group__lesson__04__memory__const__static.md5  group__lesson__05__procedural__miniproject.html  group__lesson__05__procedural__miniproject.map  group__lesson__05__procedural__miniproject.md5  (+4 more)
doxygen/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  files_1.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_4.js  groups_5.js  groups_6.js  groups_7.js  groups_8.js  (+27 more)
student/include/: MathUtils.h
student/src/: MathUtils.cpp
tests/: test_math_utils.cpp
